objects/Dynamic_Button__c.object
<CustomObject>
    <fields>
        <fullName>Button_Name__c</fullName>
        <inlineHelpText>The API name of the button you are wanting to hide.</inlineHelpText>
        <label>Button Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Id__c</fullName>
        <inlineHelpText>The id of whatever field you are using to evaluate in order to show/hide your custom button.</inlineHelpText>
        <label>Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>The value of what you need to be evaluated to true in order to show your button.</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Prefix__c</fullName>
        <inlineHelpText>The first 3 numbers of the id of the object you want the JS and AJAX to fire on.  For example Account is 001 - Opportunity is 006.  Click on whichever object you want and look at the first 3 numbers of the Id.</inlineHelpText>
        <label>Object Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Dynamic Button</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Prefix__c</columns>
        <columns>Button_Name__c</columns>
        <columns>Field_Id__c</columns>
        <columns>Field_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dynamic Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Buttons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>